$Id: History,v 1.37 2000-09-16 08:06:36 pia Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                      Category History file
                      ---------------------
This file should be used by G4 developers and category coordinators
to briefly summarize all major modifications introduced in the code
and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------


16.09.2000 - MGP, tag emlowen-V02-00-08	
             Const cast in G4hLowEnergyIonisation (const G4Material* into
             G4Material*) to convert the previously _good_ LowE code 
             into bad one, but palatable to G4EnergyLossTables, that has 
             various member functions requiring a non-const G4Material* 
	     pointer in the arguments
             This modification was required to avoid compilation errors
             on DEC; it is meant to be temporary
             The affected pointers SHOULD BE REVERTED TO CONST 
             AS SOON AS POSSIBLE, after agreement with the 
             G4EnergyLossTables author

16.09.2000 - MGP, tag emlowen-V02-00-07
	     Fix in G4hICRU49He::StoppingPower - a1 changed into e1 (typo?) 
	     to remove compilation problems

16.09.2000 - MGP, tag emlowen-V02-00-06
	     Modifications by V.I. in hadron classes (renaming of classes
             for better understanding of the code)

05.09.2000 - MGP, tag emlowen-V02-00-05
	     Fixes to remove warnings (hiding member functions and 
             data members) in hadron classes 
